# napari-labelling-assistant

./: LICENSE  README.md  setup.cfg  tox.ini
demo_data_labels/: data
demo_data_labels/demo_data/: Labels.tif
docs/: conf.py  index.rst
src/napari_labelling_assistant/: __init__.py  _dock_widget.py
src/napari_labelling_assistant/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
