[metadata]
name = napari-labelling-assistant
version = 0.0.4
author = Pranjal Dhole
author_email = dhole.pranjal@gmail.com
url = https://github.com/pranjaldhole/napari-labelling-assistant
license = MIT
description = A lightweight plugin for visualizing labelling statistics.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/pranjaldhole/napari-labelling-assistant/issues
    Documentation = https://github.com/pranjaldhole/napari-labelling-assistant#README.md
    Source Code = https://github.com/pranjaldhole/napari-labelling-assistant
    User Support = https://github.com/pranjaldhole/napari-labelling-assistant/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    matplotlib

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-labelling-assistant = napari_labelling_assistant
